Sur les images cachées pour les rendre visibles ou les supprimer Fixes #42 Sur les images visible -> pour les cacher Fixes #41

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -609,6 +609,10 @@ video {
   bottom: 0px;
 }
 
+.bottom-2{
+  bottom: 0.5rem;
+}
+
 .left-1{
   left: 0.25rem;
 }
@@ -643,6 +647,10 @@ video {
 
 .top-4{
   top: 1rem;
+}
+
+.z-20{
+  z-index: 20;
 }
 
 .z-50{
@@ -732,6 +740,10 @@ video {
 
 .h-4{
   height: 1rem;
+}
+
+.h-5{
+  height: 1.25rem;
 }
 
 .h-6{
@@ -824,6 +836,10 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.min-w-\[1\.25rem\]{
+  min-width: 1.25rem;
 }
 
 .min-w-\[160px\]{
@@ -1053,6 +1069,11 @@ video {
   border-color: rgb(203 213 225 / var(--tw-border-opacity, 1));
 }
 
+.border-slate-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(148 163 184 / var(--tw-border-opacity, 1));
+}
+
 .border-slate-700{
   --tw-border-opacity: 1;
   border-color: rgb(51 65 85 / var(--tw-border-opacity, 1));
@@ -1125,6 +1146,11 @@ video {
 .bg-slate-100{
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity, 1));
+}
+
+.bg-slate-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity, 1));
 }
 
 .bg-slate-50{
@@ -1537,8 +1563,8 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-white\/80{
-  color: rgb(255 255 255 / 0.8);
+.accent-emerald-500{
+  accent-color: #10b981;
 }
 
 .opacity-0{
@@ -1727,6 +1753,14 @@ video {
 .focus\:ring-indigo-400:focus{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(129 140 248 / var(--tw-ring-opacity, 1));
+}
+
+.disabled\:cursor-not-allowed:disabled{
+  cursor: not-allowed;
+}
+
+.disabled\:opacity-40:disabled{
+  opacity: 0.4;
 }
 
 .group:hover .group-hover\:scale-105{
